# traffic-simulator

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
examples/: example.py  parts_example.py
tests/: test.py  test_geometry.py  test_physics.py  test_road.py
traffic_sim/: __init__.py  animation.py  constants.py  geometry.py  linked_road.py  physics.py  road.py  test.py
